<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <PreferenceCategory android:title="Simple Preferences" >

        <CheckBoxPreference
            android:key="saveNamePasswordPref"
            android:summary="@string/save_name_password_summary"
            android:title="@string/save_name_password_title" />

        <CheckBoxPreference
            android:key="hintsPref"
            android:summary="@string/hints_summary"
            android:title="@string/hints_title" />

        <CheckBoxPreference
            android:key="allowVoice"
            android:summary="@string/allow_voice_summary"
            android:title="@string/allow_voice_title" />

        <ListPreference
            android:dialogTitle="Choose a font type"
            android:entries="@array/fonts"
            android:entryValues="@array/fonts_selected"
            android:key="list"
            android:summary="Click to choose"
            android:title="Select font type for inworld" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Proxy Settings" >

        <EditTextPreference
            android:dialogTitle="@string/ip_address_dialog_title"
            android:key="ipAddressPref"
            android:summary="@string/ip_address_summary"
            android:title="@string/ip_address_title" />

        <EditTextPreference
            android:dialogTitle="@string/port_number_dialog_title"
            android:key="portNumberPref"
            android:summary="@string/port_number_summary"
            android:title="@string/port_number_title" />
    </PreferenceCategory>

</PreferenceScreen>