<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_title" />

        <EditText
            android:id="@+id/nameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_title" />

        <EditText
            android:id="@+id/passwordTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/GridLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_title" />

        <Spinner
            android:id="@+id/gridSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/grids_array"
            android:prompt="@string/grid_title" />

        <TextView
            android:id="@+id/RegionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region_title" />

        <Spinner
            android:id="@+id/regionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/regions_array"
            android:prompt="@string/region_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center" >

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/submit_button" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>