<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layout_root"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="100dp"
              android:padding="10dp">
		
    <TableLayout
    	 android:id="@+id/table_options_layout"  
    	android:layout_width="match_parent"  
    	 android:layout_height="match_parent"  
    	 android:shrinkColumns="*"  
    	 android:stretchColumns="*">  
        
   

      <TableRow
			 android:id="@+id/tableRowOptionHints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/hintsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hints_text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            <CheckBox
                android:id="@+id/hintsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowOptionVoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/allowVoiceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voice_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />
				
            <CheckBox
                android:id="@+id/allowVoiceCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"/>

        </TableRow>
      
        
    </TableLayout>

</LinearLayout>